created whole home page, contact and gallery pages

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,12 +7,6 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
   color: var(--foreground);
@@ -24,4 +18,16 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.arima {
+  font-family: var(--font-arima);
+}
+
+.nunito {
+  font-family: var(--font-nunito);
+}
+
+.raleway {
+  font-family: var(--font-raleway);
 }
